--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
                 <p class="bienvenida">Bienvenida baby a este pequeño regalo digital 👉🏻👈🏻</p>
                 <h2><span></span>💕 Aitana y Samuel 💕 
                     </h2>
-                <p class="descripcion">Hice esta pagina para que pongamos nuestra historia y nuestro amor 03|04|23 👩🏼‍❤️‍👨🏽</p>
-                <a href="#">Tiempo para nustro primer añito juntos: 2 meses</a>
+                <p class="descripcion">ANDALEEE REGALAME LA FOTO :((</a>
 
                 <style>
 
