--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
                 <p class="bienvenida">Bienvenida baby a este pequeño regalo digital 👉🏻👈🏻</p>
                 <h2><span></span>💕 Aitana y Samuel 💕 
                     </h2>
-                <p class="descripcion">ANDALEEE REGALAME LA FOTO :((</a>
+                <p class="descripcion">Hice esta pagina para que pongamos nuestra historia y nuestro amor 03|04|23 👩🏼‍❤️‍👨🏽</p>
+                <a href="#">Tiempo para nustro primer añito juntos: 2 meses</a>
 
                 <style>
 
@@ -423,7 +424,7 @@ button:hover {
  
         </pr>
         <pr>
-            - El sitio cuenta con 447 líneas de código de programación para hacerlo posible
+            - El sitio cuenta con 677 líneas de código de programación para hacerlo posible
         </pr>
         <pr>
             - Mi amor por ti siempre se ha conservado, ha cambiado de la única forma en que se hace más grande
