--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="es">
 
@@ -389,7 +390,7 @@ button:hover {
                 <div class="overlay"></div>
                 <img src="grumman.jpg" alt="">
                 <div class="info">
-                    <h4>Nosotros en un avión 🙈</h4>
+                    <h4>No hace falta descripción 🙈</h4>
                    </div>
             </div>
         </div>
@@ -398,7 +399,7 @@ button:hover {
                 <div class="overlay"></div>
                 <img src="Moly.jpg" alt="">
                 <div class="info">
-                    <h4>Moly, nuestro primer peluche:)</h4>
+                    <h4>Moly... :)</h4>
                 </div>
             </div>
             <div class="proyecto">
@@ -413,25 +414,13 @@ button:hover {
                 <div class="overlay"></div>
                 <img src="mundo.jpg" alt="">
                 <div class="info">
-                    <h4>Nuestras siluetas juntos en Mundo E 🥰</h4>
+                    <h4>Salida a Mundo E 🥰</h4>
   
     
                 </div>
             </div>
         </div>
-        <pr>
-            DATOS CURIOSOS:
- 
-        </pr>
-        <pr>
-            - El sitio cuenta con 677 líneas de código de programación para hacerlo posible
-        </pr>
-        <pr>
-            - Mi amor por ti siempre se ha conservado, ha cambiado de la única forma en que se hace más grande
-        </pr>
-        <pr>
-            - En curso también me hacías falta:( fue predict insano
-        </pr>
+      
     </section>
 
 
