--- a/scape-site.html
+++ b/scape-site.html
@@ -115,6 +115,7 @@ body, html {
                     <p>En ocasiones peleamos, o en otras ocasiones nos sentimos un poco distanciados, es por eso que hice este subdominio del sitio principal que tenemos, </p>
                     <p>Sí, peleamos un poco, pero en realidad, ¿quién no lo supera? Si miramos el núcleo de varias relaciones, dicho núcleo es la confianza y por eso Intento hacer las cosas bien porque odio cuando peleamos, Te necesito en mi vida, sin ti realmente no puedo estar bien y lo he comprobado muchas veces, solo necesito algo real, ese es el trato. No siempre tengo palabras para expresar todo pero espero que arreglemos siempre las cosas y que podamos seguir adelante. Aprecio mucho tu comprensión y tu bondad, el tiempo que pasamos, todo...</p>
                     <p>Aprovecho para decirte que hagas lo que hagas hazlo con el corazón y persigas tus sueños hasta que se hagan reaidad, creéte quién eres, confía mucho en ti siempre porque vas a lograr tus sueños siempre y de lo malo algún día te reíras!</p>
+                     <p>Tu brillas más que todas éstas estrellas y todas las del universo, mi niña bonita 💫❣</p>   
                     <p>S.G.</p>                 
                 </section>
             </main>
