--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="./icon.jpg">
+    <link rel="icon" href="./icon.jpg">
     <title>Nuestra historia</title>
     <!-- Agregar el CDN de Tailwind CSS -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
@@ -18,7 +18,7 @@
     <!-- Navbar -->
     <header class="bg-gray-800 text-white">
         <div class="container mx-auto flex justify-between items-center py-4">
-          <a href="#inicio" class="hover:text-gray-3000">  Mady 💘</a>
+            <a href="#inicio" class="hover:text-gray-3000">Mady 💘</a>
             <nav>
                 <ul class="flex space-x-4">
                     <li><a href="#inicio" class="hover:text-gray-300">NOSOTROS</a></li>
@@ -31,77 +31,71 @@
 
     <!-- SECCION INICIO -->
     <style>
-      #inicio {
-          position: relative;
-          color: white;
-      }
+        #inicio {
+            position: relative;
+            color: white;
+        }
 
-      #inicio video {
-          position: absolute;
-          top: 0;
-          left: 0;
-          min-width: 100%;
-          min-height: 100%;
-          width: auto;
-          height: auto;
-          z-index: -1;
-          filter: brightness(70%);
-      }
-  </style>
-  <body class="bg-gray-100 font-sans">
-
+        #inicio video {
+            position: absolute;
+            top: 0;
+            left: 0;
+            min-width: 100%;
+            min-height: 100%;
+            width: auto;
+            height: auto;
+            z-index: -1;
+            filter: brightness(70%);
+        }
+    </style>
     <section id="inicio" class="py-20 text-center relative">
-      <!-- Video de fondo en loop -->
-      <video autoplay loop muted playsinline>
-          <source src="./stars.mp4" type="video/mp4">
-          Tu navegador no soporta la etiqueta de video.
-      </video>
-      <div class="container mx-auto">
-        <br></br>
-          <h2 class="text-5xl font-bold mb-4">Bienvenida baby a nuestro sitio 👉🏻👈🏻</h2>
-          <br></br>
-          <p class="text-xl">💕 ᴀɪᴛᴀɴᴀ ʏ ꜱᴀᴍᴜᴇʟ 💕</p>
-          <br></br>
-          <p class="text-xl">ℍ𝕚𝕔𝕖 𝕖𝕤𝕥𝕒 𝕡á𝕘𝕚𝕟𝕒 𝕡𝕒𝕣𝕒 𝕢𝕦𝕖 𝕡𝕠𝕟𝕘𝕒𝕞𝕠𝕤 𝕟𝕦𝕖𝕤𝕥𝕣𝕒 𝕙𝕚𝕤𝕥𝕠𝕣𝕚𝕒 𝕪 𝕟𝕦𝕖𝕤𝕥𝕣𝕠 𝕒𝕞𝕠𝕣 𝟘𝟛|𝟘𝟜|𝟚𝟛 👩🏼‍❤️‍👨🏽</p>
-          <br></br>
-      </div>
-  </section>
+        <!-- Video de fondo en loop -->
+        <video autoplay loop muted playsinline>
+            <source src="./stars.mp4" type="video/mp4">
+            Tu navegador no soporta la etiqueta de video.
+        </video>
+        <div class="container mx-auto">
+            <br></br>
+            <h2 class="text-5xl font-bold mb-4">Bienvenida baby a nuestro sitio 👉🏻👈🏻</h2>
+            <br></br>
+            <p class="text-xl">💕 ᴀɪᴛᴀɴᴀ ʏ ꜱᴀᴍᴜᴇʟ 💕</p>
+            <br></br>
+            <p class="text-xl">ℍ𝕚𝕔𝕖 𝕖𝕤𝕥𝕒 𝕡á𝕘𝕚𝕟𝕒 𝕡𝕒𝕣𝕒 𝕢𝕦𝕖 𝕡𝕠𝕟𝕘𝕒𝕞𝕠𝕤 𝕟𝕦𝕖𝕤𝕥𝕣𝕒 𝕙𝕚𝕤𝕥𝕠𝕣𝕚𝕒 𝕪 𝕟𝕦𝕖𝕤𝕥𝕣𝕠 𝕒𝕞𝕠𝕣 𝟘𝟛|𝟘𝟜|𝟚𝟛 👩🏼‍❤️‍👨🏽</p>
+            <br></br>
+        </div>
+    </section>
 
-<!-- SECCION SOBRE MI -->
+    <!-- SECCION SOBRE MI -->
+    <section id="sobremi" class="py-20 bg-gray-200">
+        <div class="container mx-auto flex flex-col md:flex-row items-center">
+            <div class="w-full md:w-1/2">
+                <img src="great.jpeg" alt="Sobre mí" class="rounded-lg mb-8 md:mb-0 mx-auto md:mx-0">
+            </div>
+            <div class="w-full md:w-1/2 text-center md:text-left bg-gradient-to-br from-blue-200 to-blue-400 rounded-lg p-8 shadow-md">
+                <p class="text-xl font-bold mb-4">Nuestra Relacion</p>
+                <p class="text-lg">Hola mi niña hermosa,</p>
+                <p class="text-lg">Primero que nada, te quiero decir que te amo demasiado mi niña 🥺❤</p>
+                <p class="text-lg">Mi princesa, espero te guste mi idea, quise crear una página donde podamos tener nuestra historia y como nos conocimos. Mi amor por ti no tiene límites, nunca había querido a una persona como a ti, eres mi todo mi niña 💌</p>
+                <p class="text-lg">Cuando te sientas mal podrás venir acá y ver nuestras cositas, todo lo bueno que hemos pasado y que a pesar de todo, nunca nos dimos por vencidos mi princesa hermosa. Recuerda que siempre serás mi niña 🥺</p>
+            </div>
+        </div>
+    </section>
 
-<section id="sobremi" class="py-20 bg-gray-200">
-  <div class="container mx-auto flex flex-col md:flex-row items-center">
-      <div class="w-full md:w-1/2">
-          <img src="great.jpeg" alt="Sobre mí" class="rounded-lg mb-8 md:mb-0 mx-auto md:mx-0">
-      </div>
-      <div class="w-full md:w-1/2 text-center md:text-left bg-gradient-to-br from-blue-200 to-blue-400 rounded-lg p-8 shadow-md">
-          <p class="text-xl font-bold mb-4">Nuestra Relacion</p>
-          <p class="text-lg">Hola mi niña hermosa,</p>
-          <p class="text-lg">Primero que nada, te quiero decir que te amo demasiado mi niña 🥺❤</p>
-          <p class="text-lg">Mi princesa, espero te guste mi idea, quise crear una página donde podamos tener nuestra historia y como nos conocimos. Mi amor por ti no tiene límites, nunca había querido a una persona como a ti, eres mi todo mi niña 💌</p>
-          <p class="text-lg">Cuando te sientas mal podrás venir acá y ver nuestras cositas, todo lo bueno que hemos pasado y que a pesar de todo, nunca nos dimos por vencidos mi princesa hermosa. Recuerda que siempre serás mi niña 🥺</p>
-      </div>
-  </div>
-</section>
-
-
-<!-- SECCION AUDIO -->
-<section id="audio" class="py-20 text-center">
-  <div class="container mx-auto">
-      <div class="bg-gradient-to-r from-pink-400 to-purple-600 rounded-lg p-8 inline-block shadow-lg">
-          <h2 class="text-3xl font-bold mb-4 text-white">Falling - Lil Mosey</h2>
-          <div class="flex justify-center items-center mb-4">
-              <audio controls class="mb-4">
-                  <source src="Falling.mp3" type="audio/mp3">
-                  Tu navegador no soporta la etiqueta de audio.
-              </audio>
-          </div>
-          <button class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded-lg transition duration-300 ease-in-out transform hover:scale-105">· R E P R O D U C I R ·</button>
-      </div>
-  </div>
-</section>
-
-
+    <!-- SECCION AUDIO -->
+    <section id="audio" class="py-20 text-center">
+        <div class="container mx-auto">
+            <div class="bg-gradient-to-r from-pink-400 to-purple-600 rounded-lg p-8 inline-block shadow-lg">
+                <h2 class="text-3xl font-bold mb-4 text-white">Falling - Lil Mosey</h2>
+                <div class="flex justify-center items-center mb-4">
+                    <audio controls class="mb-4">
+                        <source src="Falling.mp3" type="audio/mp3">
+                        Tu navegador no soporta la etiqueta de audio.
+                    </audio>
+                </div>
+                <button class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded-lg transition duration-300 ease-in-out transform hover:scale-105">· R E P R O D U C I R ·</button>
+            </div>
+        </div>
+    </section>
 
     <!-- SECCION PORTAFOLIO -->
     <section id="portfolio" class="py-20">
@@ -148,19 +142,32 @@
         </div>
     </section>
 
+    <!-- Recuadro con fecha y reloj -->
+    <section id="special-message" class="py-20">
+        <div class="container mx-auto">
+            <div class="bg-gradient-to-r from-green-400 to-blue-600 rounded-lg p-8 shadow-lg">
+                <h2 id="current-date" class="text-3xl font-bold mb-4 text-white text-center">14 de julio del 2024</h2>
+                <div id="clock" class="text-xl text-white text-center mb-4"></div>
+                <div class="bg-white p-4 rounded-lg shadow-md">
+                    <p class="text-lg">Hola mi niña bonita, buenos días, al momento en el que estoy escribiendo esto son las 4:21 a.m, tu estás descansando porque te lo mereces porque siempre le echas ganitas, por eso siempre me siento y me sentiré orgulloso de ti por siempre y para siempre, hace tiempo no actualizaba la página, pero nunca me olvidé de darle mantenimiento, también quiero aprovechar este pequeño espacio para decirte que no solo es un año y 3 meses los que te llevo amando, siento muchas cosas por ti desde que te conozco aunque hasta a mi me sorprenda el haberme enamorado de ti "a simple vista", conociéndonos más fue como me di cuenta que serías una persona ideal para mi, y siempre lo serás para mi, se que no todo ha sido perfecto, hemos tenido malos momentos tanto personales como entre nosotros pero quién realmente no los supera? Yo siempre buscaré una solución para todo, por nosotros porque no quiero que todo lo que hems construido se vaya así de la nada como si nada hubiera pasado, es mi miedo, despertar algún día y que no estemos juntos es a lo que más le temo, porque te quiero siempre en mi vida porque tu te haz vuelto mi vida entera mi niña bonita, siempre lo serás para mi indudablemente, porque eres alguien muy especial y única para mi, que para mi no hay 2 como tú, porque eres la mejor mi niña. Yo quiero cuidarte por siempre y cuidar tu lindo corazoncito y por que no? también cuidar a calcetines jajaksj, te amo mi niña, jamás lo dudes pq te lo demotraré por toda mi vida 💘</p>
+                </div>01010100 01100101 00100000 01100001 01101101 01101111 00100000 01101101 01110101 01100011 01101000 01101111 00100000 01101101 01101001 00100000 01101110 01101001 11110001 01100001 00100000 01100010 01101111 01101110 01101001 01110100 01100001 00111100 00110011 
+            </div>
+        </div>
+    </section>
+
     <!-- Botón elegante -->
     <section class="py-20 text-center">
         <div class="container mx-auto">
             <button class="bg-pink-500 hover:bg-pink-600 text-white font-bold py-4 px-8 rounded-lg" onclick="abrirNuevaPestana()">Da click aquí<3</button>
         </div>
     </section>
-   
-     <!-- Botón elegante 2-->
-     <section class="py-20 text-center">
-      <div class="container mx-auto">
-          <button class="bg-pink-500 hover:bg-pink-600 text-white font-bold py-4 px-8 rounded-lg" onclick="abrirNuevaPestana2()">Nuestro primer añito juntos<3</button>
-      </div>
-  </section>
+
+    <!-- Botón elegante 2 -->
+    <section class="py-20 text-center">
+        <div class="container mx-auto">
+            <button class="bg-pink-500 hover:bg-pink-600 text-white font-bold py-4 px-8 rounded-lg" onclick="abrirNuevaPestana2()">Nuestro primer añito juntos<3</button>
+        </div>
+    </section>
 
     <!-- Footer -->
     <footer class="bg-gray-800 text-white py-4">
@@ -187,6 +194,37 @@
         function abrirNuevaPestana2() {
             window.open('https://samuelg165.github.io/momentos/one-year.html', '_blank');
         }
+
+        // Función para actualizar el reloj
+        function updateClock() {
+            var now = new Date();
+            var hours = now.getHours();
+            var minutes = now.getMinutes();
+            var seconds = now.getSeconds();
+
+            // Añadir un 0 delante de los números menores de 10
+            if (hours < 10) hours = '0' + hours;
+            if (minutes < 10) minutes = '0' + minutes;
+            if (seconds < 10) seconds = '0' + seconds;
+
+            var currentTime = hours + ':' + minutes + ':' + seconds;
+
+            document.getElementById('clock').innerText = currentTime;
+        }
+
+        // Actualizar el reloj cada segundo
+        setInterval(updateClock, 1000);
+
+        // Mostrar la fecha actual
+        function displayCurrentDate() {
+            var now = new Date();
+            var options = { year: 'numeric', month: 'long', day: 'numeric' };
+            var currentDate = now.toLocaleDateString('es-ES', options);
+            document.getElementById('current-date').innerText = currentDate;
+        }
+
+        displayCurrentDate();
+        updateClock();
     </script>
 </body>
 
